--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
     <main>
-      <h1>Home page</h1>
+
+      <button id="viewPersonInfo">person info</button>
+
+      <button id="viewCalculation">regnestykke</button>
+
     </main>
   </body>
 </html>
